--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "source": "./src/index.html",
     "scripts": {
         "start": "parcel --no-cache",
-        "build": "rm -rf dist/* && parcel build src/index.html --no-cache"
+        "build": "rm -rf dist/* && parcel build src/index.html --no-cache",
+        "server": "http-server dist/"
     },
     "author": "",
     "license": "ISC",
@@ -21,7 +22,8 @@
     },
     "browserslist": "> 0.5%, last 2 versions, not dead",
     "dependencies": {
-        "posthtml-doctype": "^1.1.1"
+        "posthtml-doctype": "^1.1.1",
+        "uuid": "^9.0.0"
     },
     "targets": {
         "default": {
